--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "scripts": {
     "client": "cd client && yarn start",
     "server": "nodemon server.js",
-    "dev": "concurrently --kill-others-on-fail \"yarn server\" \"yarn client\""
+    "dev": "concurrently --kill-others-on-fail \"yarn server\" \"yarn client\"",
+    "start": "node server.js",
+    "heroku-postbuild": "cd react-ui/ && npm install && npm install --only=dev --no-shrinkwrap && npm run build"
   },
   "dependencies": {
     "express": "^4.16.2",
@@ -17,5 +19,21 @@
   },
   "devDependencies": {
     "concurrently": "^3.5.0"
-  }
+  },
+  "main": "server.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/yukims19/test-montage.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/yukims19/test-montage/issues"
+  },
+  "engines": {
+    "node": "8.1.3",
+    "npm": "5.0.4"
+  },
+  "homepage": "https://github.com/yukims19/test-montage#readme",
+  "description": ""
 }
