--- a/package.json
+++ b/package.json
@@ -5,8 +5,13 @@
     "client": "cd client && yarn start",
     "server": "nodemon server.js",
     "dev": "concurrently --kill-others-on-fail \"yarn server\" \"yarn client\"",
-    "start": "node server.js",
+    "start": "node server",
     "heroku-postbuild": "cd react-ui/ && npm install && npm install --only=dev --no-shrinkwrap && npm run build"
+  },
+
+  "engines": {
+    "node": "8.1.3",
+    "npm": "5.0.4"
   },
   "dependencies": {
     "express": "^4.16.2",
@@ -19,21 +24,5 @@
   },
   "devDependencies": {
     "concurrently": "^3.5.0"
-  },
-  "main": "server.js",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/yukims19/test-montage.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/yukims19/test-montage/issues"
-  },
-  "engines": {
-    "node": "8.1.3",
-    "npm": "5.0.4"
-  },
-  "homepage": "https://github.com/yukims19/test-montage#readme",
-  "description": ""
+  }
 }
