--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "server": "nodemon server.js",
     "dev": "concurrently --kill-others-on-fail \"yarn server\" \"yarn client\"",
     "start": "node server",
-    "heroku-postbuild": "cd client/ && npm install && npm install --only=dev --no-shrinkwrap && npm run build"
+    "heroku-postbuild": "npm install && cd client && npm install --only-dev && npm install && npm run build"
   },
   "engines": {
     "node": "8.1.3",
@@ -21,6 +21,7 @@
     "pg-promise": "^8.4.5",
     "sqlite3": "^4.0.2"
   },
+  "main": "server.js",
   "devDependencies": {
     "concurrently": "^3.5.0"
   }
