--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "heroku-postbuild": "npm install && npm run start"
   },
   "engines": {
-    "node": "8.1.3",
-    "npm": "5.0.4"
+    "node": "8.9.1",
+    "npm": "5.0.3"
   },
   "dependencies": {
     "express": "^4.16.2",
@@ -18,8 +18,7 @@
     "kue": "^0.11.6",
     "pg": "^7.4.3",
     "pg-escape": "^0.2.0",
-    "pg-promise": "^8.4.5",
-    "sqlite3": "^4.0.2"
+    "pg-promise": "^8.4.5"
   },
   "main": "server.js",
   "devDependencies": {
