--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "client": "cd client && yarn start",
     "server": "nodemon server.js",
     "dev": "concurrently --kill-others-on-fail \"yarn server\" \"yarn client\"",
-    "start": "node server",
+    "start": "node server"
   },
   "engines": {
     "node": "8.9.1",
