--- a/package.json
+++ b/package.json
@@ -1,26 +1,31 @@
 {
-  "name": "montage",
+  "name": "heroku-cra-node",
   "version": "1.0.0",
-  "scripts": {
-    "client": "cd client && yarn start",
-    "server": "nodemon server.js",
-    "dev": "concurrently --kill-others-on-fail \"yarn server\" \"yarn client\"",
-    "start": "node server"
-  },
+  "description": "How to use create-react-app with a custom Node API on Heroku",
   "engines": {
-    "node": "8.9.1",
-    "npm": "5.0.3"
+    "node": "8.9.x"
   },
+  "scripts": {
+    "start": "node server",
+    "heroku-postbuild": "cd react-ui/ && npm install && npm install --only=dev --no-shrinkwrap && npm run build"
+  },
+  "cacheDirectories": [
+    "node_modules",
+    "react-ui/node_modules"
+  ],
   "dependencies": {
-    "express": "^4.15.2",
-    "idx": "^2.4.0",
-    "kue": "^0.11.6",
-    "pg": "^7.4.3",
-    "pg-escape": "^0.2.0",
-    "pg-promise": "^8.4.5"
+    "express": "^4.16.3"
   },
-  "main": "server.js",
-  "devDependencies": {
-    "concurrently": "^3.5.0"
-  }
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/mars/heroku-cra-node.git"
+  },
+  "keywords": [
+    "node",
+    "heroku",
+    "create-react-app",
+    "react"
+  ],
+  "license": "MIT",
+  "devDependencies": {}
 }
