--- a/react-ui/package.json
+++ b/react-ui/package.json
@@ -1,13 +1,20 @@
 {
-  "name": "react-ui",
+  "name": "montage",
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
     "react-scripts": "^1.1.4"
   },
   "dependencies": {
+    "antd": "^3.7.3",
+    "apollo-boost": "^0.1.12",
+    "graphql": "^0.13.2",
+    "onegraph-apollo-client": "^0.2.11",
+    "onegraph-auth": "^0.2.11",
     "react": "^16.4.1",
-    "react-dom": "^16.4.1"
+    "react-apollo": "^2.1.0-beta.3",
+    "react-dom": "^16.4.1",
+    "react-scripts": "1.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
