--- a/react-ui/package.json
+++ b/react-ui/package.json
@@ -9,10 +9,12 @@
     "antd": "^3.7.3",
     "apollo-boost": "^0.1.12",
     "graphql": "^0.13.2",
+    "graphql-tag": "^2.9.2",
+    "idx": "^2.4.0",
     "onegraph-apollo-client": "^0.2.11",
     "onegraph-auth": "^0.2.11",
     "react": "^16.4.1",
-    "react-apollo": "^2.1.0-beta.3",
+    "react-apollo": "^2.1.9",
     "react-dom": "^16.4.1",
     "react-scripts": "1.1.4"
   },
