--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   ],
   "dependencies": {
     "express": "^4.16.3",
+    "idx": "^2.4.0",
+    "kue": "^0.11.6",
     "pg": "^7.4.3",
     "pg-escape": "^0.2.0"
   },
