--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.16.3",
     "idx": "^2.4.0",
     "kue": "^0.11.6",
+    "node-fetch": "^2.2.0",
     "pg": "^7.4.3",
     "pg-escape": "^0.2.0"
   },
